# pex87xx

./: .gitignore  CMakeLists.txt  Makefile  README.md  pex-common.c  pex-dump.c  pex-probe.c  pex-status.c  pex87xx.c  pex87xx.h
cmake/: Versions.cmake
examples/: pex-dump.c  pex-read.c  pex-status.c  pex-write.c
pex8724-dumps/: port-02.txt  port-08.txt  temp-0.txt  temp-3.txt  temp-9.txt
src/: pex87xx.c  pex87xx.h
